<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/register_title"
            android:textSize="30sp"
            android:textColor="@android:color/holo_orange_dark"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/user_id_text"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/tv_mleft"
            android:layout_width="@dimen/tv_width"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_id"
            android:textSize="@dimen/et_size"
            android:hint="@string/re_et_id"
            android:inputType="number"
            android:maxLength="5"
            android:minLines="5"
            android:layout_width="@dimen/et_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"  />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/user_name_text"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/tv_mleft"
            android:layout_width="@dimen/tv_width"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_name"
            android:textSize="@dimen/et_size"
            android:hint="@string/re_et_name"
            android:layout_width="@dimen/et_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"  />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/user_pwd_text"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/tv_mleft"
            android:layout_width="@dimen/tv_width"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_pwd"
            android:textSize="@dimen/et_size"
            android:inputType="textPassword"
            android:hint="@string/re_et_pwd"
            android:maxLength="12"
            android:layout_width="@dimen/et_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"  />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/user_exp_text"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/tv_mleft"
            android:layout_width="@dimen/tv_width"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_exp"
            android:textSize="@dimen/et_size"
            android:hint="@string/re_et_exp"
            android:layout_width="@dimen/et_width"
            android:maxLength="200"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="@dimen/tv_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tv_mleft"
            android:text="@string/referral_code"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_code"
            android:textSize="@dimen/et_size"
            android:layout_width="@dimen/et_width"
            android:layout_height="match_parent"
            android:hint="@string/required"
            android:maxLength="5"
            android:layout_marginEnd="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <Button
            android:id="@+id/regUserBtn"
            android:onClick="regUserBtn"
            android:text="@string/register_button"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_bg"
            android:layout_width="200dp"
            android:layout_height="40dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:text="@string/back"
            android:onClick="backClick"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="17dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp" />
    </RelativeLayout>


</LinearLayout>