<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/loginLayout"
    >

    <RelativeLayout
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/ltv1"
            android:gravity="center"
            android:text="@string/user_name_text"
            android:textSize="20sp"
            android:textColor="@color/button_bgc"
            android:layout_marginStart="@dimen/tv_mleft"
            android:layout_width="@dimen/tv_width"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/userNameText"
            android:hint="@string/login_et_name"
            android:textSize="17sp"
            android:layout_width="@dimen/et_width"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/ltv1"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/ltv2"
            android:textColor="@color/button_bgc"
            android:gravity="center"
            android:text="@string/user_pwd_text"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/tv_mleft"
            android:layout_width="@dimen/tv_width"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/userPwdText"
            android:layout_width="@dimen/et_width"
            android:layout_height="match_parent"
            android:hint="@string/re_et_name"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:layout_toEndOf="@id/ltv2"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>



    <Button
        android:id="@+id/sendBtn"
        android:text="@string/login_send"
        android:textSize="20sp"
        android:textColor="@android:color/holo_green_light"
        android:onClick="loginClick"
        android:background="@drawable/button_bg"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="150dp"
        android:layout_height="40dp" />
    <TextView
        android:id="@+id/registerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/button_bgc2"
        android:fontFamily="serif-monospace"
        android:text="@string/register_user"
        android:padding="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>